structural-typing/tests/ui/tuple_struct_rejected.stderr
error: #[structural] requires named fields
 --> tests/ui/tuple_struct_rejected.rs:4:13
  |
4 | struct Tuple(String, u32);
  |             ^^^^^^^^^^^^^
