structural-typing/tests/ui/tuple_struct_rejected.rs
use structural_typing::structural;

#[structural]
struct Tuple(String, u32);

fn main() {}
